# mclang-up

./: Cargo.toml  README.md  mclang-up.sh
src/: install.rs  main.rs  util.rs
